--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,15 @@
     <%- include('./partials/nav.ejs') %> 
 
     <div class="index content">
-        <h2>Message Node</h2>
+        <h2>All messages</h2>
+        <% if (messages.length > 0){ %>
+            <% messages.forEach(message => { %>
+                <h3><%= message.user %></h3>
+                <h5><%= message.text %></h5>
+            <%  }) %>
+        <% } else { %>
+            <h2>No Messages Found</h2>
+        <% } %>
 
     <%- include('./partials/footer.ejs') %> 
 </body>
