Edit New Message page

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
     <%- include('./partials/nav.ejs') %> 
 
     <div class="index content">
-        <h2>Message Node New Page</h2>
+        <h2>New Message</h2>
 
         <form method="POST" action="/new">
             <label for="user">Username: </label>
