--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
         <a href="/"><h1>Message Node</h1></a>
     </div>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/new">About</a></li>
+        <li><a href="/">Inbox</a></li>
+        <li><a href="/new">New Message</a></li>
     </ul>
 </nav>
