--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,7 @@ nav > ul {
 .app > div > h2{
     color: #fc6;
 }
-.app > div > h3 {
+.box > h3 {
     color:  rgba(102, 235, 255, 0.85);
 }
 
@@ -39,6 +39,17 @@ nav > ul {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.homepage-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.box{
+    border: 1px solid rgb(84, 120, 125);
+    border-radius: 5px;
+    padding: 10px;
 }
 
 input[type="text"], textarea {
